force-app/main/default/objects/Pipeline_Command_Center_Preference__c/Pipeline_Command_Center_Preference__c.object-meta.xml
<CustomObject>
    <label>Pipeline Command Center Preference</label>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Command Center Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>