force-app/main/default/objects/Pipeline_Command_Center_Preference__c/fields/Button_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_1_Label__c</fullName>
    <label>Button 1 Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>