force-app/main/default/objects/Pipeline_Command_Center_Preference__c/fields/Button_2_Filter__c.field-meta.xml
<CustomField>
    <fullName>Button_2_Filter__c</fullName>
    <label>Button 2 Filter</label>
    <length>120</length>
    <type>Text</type>
</CustomField>