force-app/main/default/objects/Pipeline_Command_Center_Preference__c/fields/Button_3_Object__c.field-meta.xml
<CustomField>
    <fullName>Button_3_Object__c</fullName>
    <label>Button 3 Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>