force-app/main/default/objects/Pipeline_Command_Center_Preference__c/fields/Column_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Column_Preferences__c</fullName>
    <description>JSON map of Home Screen Command Center tab keys to the column keys selected by this user.</description>
    <label>Column Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>