force-app/main/default/objects/Pipeline_Command_Center_Preference__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Pipeline Command Center Preferences</relationshipLabel>
    <relationshipName>Pipeline_Command_Center_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>